--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" /> -->
+  <link href="https://fonts.googleapis.com/css?family=Bellefair|Fresca|Gloria+Hallelujah|Inconsolata|Indie+Flower|Josefin+Sans|Lato|Open+Sans|Open+Sans+Condensed:300|Pacifico|Raleway|Roboto|Zilla+Slab" rel="stylesheet">
 </head>
 
 <body>
