--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <title>angular-editor-fabric-js</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link href="https://fonts.googleapis.com/css?family=Bellefair|Fresca|Gloria+Hallelujah|Inconsolata|Indie+Flower|Josefin+Sans|Lato|Open+Sans|Open+Sans+Condensed:300|Pacifico|Raleway|Roboto|Zilla+Slab" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
-  <app-shell> Cargando...</app-shell>
+  <app-root></app-root>
 </body>
 
 </html>
